--- a/wiki/ModelisationBitmapData.wiki
+++ b/wiki/ModelisationBitmapData.wiki
@@ -56,3 +56,5 @@ https://daedalus-lib.googlecode.com/svn/wiki/img/page3/supernull_nb.png
 result after triangulation:
 
 https://daedalus-lib.googlecode.com/svn/wiki/img/page3/supernull_triangulated.jpg
+
+[Pathfinding Next : Solve pathfinding requests]
